--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Overpowered Discord Webhook Sender</title>
+    <title>Ultimate Raid Generator</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -28,93 +28,171 @@
         }
         h1 {
             color: #ff5c5c;
+            font-size: 36px;
         }
         .embed-container {
             margin-top: 30px;
+            color: #fff;
+            padding: 20px;
+            background-color: #333;
+            border-radius: 10px;
+            display: inline-block;
+            width: 80%;
+            text-align: left;
+        }
+        .embed {
+            margin: 10px 0;
+        }
+        .embed-title {
+            font-size: 22px;
+            font-weight: bold;
+            color: #ff5c5c;
+        }
+        .embed-description {
+            font-size: 16px;
+        }
+        .embed-image {
+            width: 100%;
+            border-radius: 10px;
         }
     </style>
 </head>
 <body>
 
-    <h1>Overpowered Webhook Sender</h1>
-    <p>Enter your Discord Webhook URL and click "RAID" to send the powerful message to your server!</p>
-
-    <input type="text" id="webhookUrl" placeholder="Enter your webhook URL">
-    <button onclick="sendRaid()">RAID</button>
+    <h1>Ultimate Raid Generator</h1>
+    <button onclick="generateRaid()">RAID NOW!</button>
 
     <div class="embed-container" id="embedOutput"></div>
 
     <script>
-        function getRandomizedName() {
-            const names = ['The Unstoppable', 'Master of Realms', 'The Silent Destroyer', 'Wielder of Shadows', 'Overlord of Discord'];
-            return names[Math.floor(Math.random() * names.length)];
+        const usernames = [
+            "💀DeathBringer💀", "⚡ThunderStrike⚡", "🔥BlazeRider🔥", "🌙NightCrawler🌙",
+            "❄️FrostByte❄️", "🖤DarkVoid🖤", "💎CrystalHunter💎", "🌪️Tornado🌪️",
+            "🎭PhantomMask🎭", "⚔️WarLord⚔️", "🦾CyberNinja🦾", "🌊TidalWave🌊",
+            "saturn#0000", "xynezal", "S1N#1436", "wxves#0001", "RaidMaster69", "DestroyerBot"
+        ];
+
+        const raidMessages = [
+            "💥 GET RAIDED NOOBS! 💥",
+            "🚀 YOUR SERVER IS UNDER ATTACK! 🚀",
+            "⚡ THUNDER RAID INCOMING! ⚡",
+            "🔥 BURN THIS SERVER DOWN! 🔥",
+            "💀 DEATH TO ALL ADMINS! 💀",
+            "🌪️ TORNADO RAID ACTIVATED! 🌪️",
+            "LOL THIS SERVER SUCKS",
+            "GET REKT KIDS",
+            "RAID GANG ON TOP",
+            "DELETE THIS TRASH SERVER"
+        ];
+
+        const embedColors = ['#FF0000', '#00FF00', '#0000FF', '#FF00FF', '#FFFF00', '#00FFFF', '#FF8000', '#8000FF'];
+
+        const images = [
+            "https://i.imgur.com/fKL9TmC.jpg", // Destruction
+            "https://i.imgur.com/gFaJLzd.jpg", // Warning
+            "https://i.imgur.com/LbYpVzm.jpg", // Takeover
+            "https://i.imgur.com/nfV7Wn7.jpg", // Chaos
+            "https://i.imgur.com/9jO0TVe.jpg"  // Apocalypse
+        ];
+
+        function getRandomElement(arr) {
+            return arr[Math.floor(Math.random() * arr.length)];
         }
 
-        function generateEmbed() {
-            const avatarUrl = 'https://example.com/path/to/your/avatar.jpg'; // Replace with your image URL
-            const raidImageUrl = 'https://example.com/path/to/raid_image.jpg'; // Replace with a raid-themed image URL
+        function createRaidEmbed() {
+            const embedTypes = ['destruction', 'warning', 'takeover', 'chaos', 'apocalypse'];
+            const embedType = getRandomElement(embedTypes);
 
-            return {
-                "content": "@everyone",  // Pinging everyone
-                "embeds": [{
-                    "title": "🚨 ATTENTION EVERYONE! 🚨",
-                    "description": "The **" + getRandomizedName() + "** has arrived! **Prepare for destruction!**",
-                    "color": 0xFF0000,
-                    "author": {
-                        "name": "Shadows Realms Defense",
-                        "icon_url": avatarUrl // Avatar icon for the bot or your image
-                    },
-                    "thumbnail": {
-                        "url": avatarUrl // Avatar thumbnail
-                    },
-                    "image": {
-                        "url": raidImageUrl // Large raid-themed image
-                    },
-                    "fields": [
-                        {
-                            "name": "⚡ COMMAND",
-                            "value": "**EVERYONE MUST RESPECT THE POWER!**",
-                            "inline": false
-                        },
-                        {
-                            "name": "🔥 STATUS",
-                            "value": "You are now under the control of the Overpowered One!",
-                            "inline": false
-                        }
+            let embed = {};
+            const image = getRandomElement(images); // Get a random image for each raid
+
+            if (embedType === 'destruction') {
+                embed = {
+                    title: "💥 SERVER DESTRUCTION PROTOCOL INITIATED 💥",
+                    description: "🔥 **YOUR SERVER IS BEING DEMOLISHED!** 🔥\n\n⚡ Resistance is futile ⚡\n🌪️ Prepare for total annihilation 🌪️",
+                    color: getRandomElement(embedColors),
+                    fields: [
+                        { name: "💀 Status", value: "**UNDER ATTACK**", inline: true },
+                        { name: "🎯 Target", value: "**ALL CHANNELS**", inline: true },
+                        { name: "⏰ Time Left", value: "**0 SECONDS**", inline: true }
                     ],
-                    "footer": {
-                        "text": "Shadows Realms Defense | Overpowering Discord",
-                        "icon_url": avatarUrl // Footer avatar
-                    }
-                }]
-            };
+                    image: { url: image },
+                    footer: { text: "Raid Bot 2025 | Unstoppable Force" }
+                };
+            } else if (embedType === 'warning') {
+                embed = {
+                    title: "⚠️ CRITICAL SECURITY BREACH DETECTED ⚠️",
+                    description: "🚨 **UNAUTHORIZED ACCESS GRANTED** 🚨\n\n🖤 Your defenses have been breached\n⚔️ Surrender now or face the consequences",
+                    color: '#FF0000',
+                    fields: [
+                        { name: "🔓 Access Level", value: "**ADMINISTRATOR**", inline: true },
+                        { name: "🎭 Intruders", value: "**999+**", inline: true },
+                        { name: "🔥 Threat Level", value: "**MAXIMUM**", inline: true }
+                    ],
+                    image: { url: image },
+                    footer: { text: "Elite Hacker Collective | Anonymous" }
+                };
+            } else if (embedType === 'takeover') {
+                embed = {
+                    title: "👑 SERVER TAKEOVER IN PROGRESS 👑",
+                    description: "🎯 **THIS TERRITORY IS NOW OURS!** 🎯\n\n🖤 New management has arrived\n⚡ Bow down to your new overlords",
+                    color: '#8000FF',
+                    fields: [
+                        { name: "👑 New Owner", value: "**RAID KING**", inline: true },
+                        { name: "📈 Control %", value: "**100%**", inline: true },
+                        { name: "🎭 Army Size", value: "**UNLIMITED**", inline: true }
+                    ],
+                    image: { url: image },
+                    footer: { text: "Raid Empire | Total Domination Achieved" }
+                };
+            } else if (embedType === 'chaos') {
+                embed = {
+                    title: "🌪️ CHAOS ENGINE ACTIVATED 🌪️",
+                    description: "🔥 **PURE PANDEMONIUM UNLEASHED!** 🔥\n\n💀 Order has been destroyed\n⚡ Anarchy reigns supreme",
+                    color: '#FF8000',
+                    fields: [
+                        { name: "🎲 Chaos Level", value: "**INFINITE**", inline: true },
+                        { name: "💥 Destruction", value: "**TOTAL**", inline: true },
+                        { name: "🌊 Wave #", value: `**${Math.floor(Math.random() * 999)}**`, inline: true }
+                    ],
+                    image: { url: image },
+                    footer: { text: "Chaos Lords | Bringers of Mayhem" }
+                };
+            } else {
+                embed = {
+                    title: "🔥 DIGITAL APOCALYPSE COMMENCED 🔥",
+                    description: "💀 **THE END TIMES HAVE ARRIVED** 💀\n\n⚡ Your server burns in digital flames\n🌪️ No salvation, only destruction",
+                    color: '#000000',
+                    fields: [
+                        { name: "☠️ Survivors", value: "**0**", inline: true },
+                        { name: "🔥 Burn Rate", value: "**100%/sec**", inline: true },
+                        { name: "⏳ Hope Left", value: "**NONE**", inline: true }
+                    ],
+                    image: { url: image },
+                    footer: { text: "Apocalypse Protocol | Final Phase Active" }
+                };
+            }
+            return embed;
         }
 
-        function sendRaid() {
-            const webhookUrl = document.getElementById('webhookUrl').value;
-            if (!webhookUrl) {
-                alert("Please enter a valid webhook URL.");
-                return;
-            }
+        function generateRaid() {
+            const raidMessage = getRandomElement(raidMessages);
+            const username = getRandomElement(usernames);
+            const embed = createRaidEmbed();
 
-            const embedData = generateEmbed();
-
-            fetch(webhookUrl, {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify(embedData)
-            })
-            .then(response => response.json())
-            .then(data => {
-                console.log('Successfully sent message:', data);
-                alert("Raid sent successfully!");
-            })
-            .catch(error => {
-                console.error('Error sending message:', error);
-                alert("Failed to send raid.");
-            });
+            const embedOutput = document.getElementById('embedOutput');
+            embedOutput.innerHTML = `
+                <div class="embed">
+                    <div class="embed-title">${embed.title}</div>
+                    <div class="embed-description">${embed.description}</div>
+                    <div><strong>Status:</strong> ${embed.fields[0].value}</div>
+                    <div><strong>Target:</strong> ${embed.fields[1].value}</div>
+                    <div><strong>Time Left:</strong> ${embed.fields[2].value}</div>
+                    <div><strong>Raid Message:</strong> ${raidMessage}</div>
+                    <div><strong>Username:</strong> ${username}</div>
+                    <div><img class="embed-image" src="${embed.image.url}" alt="Raid Image"></div>
+                </div>
+            `;
         }
     </script>
 
