--- a/index.html
+++ b/index.html
@@ -1,155 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Discord Templates</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #1e1e1e;
-      color: white;
-      margin: 0;
-      padding: 0;
-    }
-    header {
-      background-color: #202225;
-      padding: 10px 20px;
-      text-align: center;
-    }
-    .container {
-      padding: 20px;
-    }
-    .form-section, .template-section {
-      margin-bottom: 30px;
-    }
-    input, button {
-      width: 100%;
-      padding: 10px;
-      margin: 5px 0;
-      border-radius: 5px;
-      border: 1px solid #333;
-      background-color: #2c2f33;
-      color: white;
-    }
-    .template-card, .card {
-      background-color: #333;
-      padding: 15px;
-      border-radius: 8px;
-      margin-bottom: 10px;
-    }
-    .template-card h3, .card h3 {
-      margin: 0;
-    }
-    .template-card a, .card a {
-      color: #7289da;
-      text-decoration: none;
-    }
-    .template-card a:hover, .card a:hover {
-      text-decoration: underline;
-    }
-    .card-group {
-      display: flex;
-      gap: 20px;
-    }
-    .card {
-      flex: 1;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Terms of Service</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <h1>Terms of Service</h1>
+    </header>
+    <main>
+        <section id="introduction">
+            <h2>Welcome to Our Terms of Service</h2>
+            <p>Please read these Terms of Service ("Terms", "Terms of Service") carefully before using the [Your Website Name] website (the "Service") operated by [Your Company Name] ("us", "we", or "our").</p>
+            <p>Your access to and use of the Service is conditioned on your acceptance of and compliance with these Terms. These Terms apply to all visitors, users and others who access or use the Service.</p>
+            <p>By accessing or using the Service you agree to be bound by these Terms. If you disagree with any part of the terms then you may not access the Service.</p>
+        </section>
 
-<header>
-  <h1>Discord Templates</h1>
-</header>
+        <section id="accounts">
+            <h2>Accounts</h2>
+            <p>When you create an account with us, you must provide us information that is accurate, complete, and current at all times. Failure to do so constitutes a breach of the Terms, which may result in immediate termination of your account on our Service.</p>
+            <p>You are responsible for safeguarding the password that you use to access the Service and for any activities or actions under your password, whether your password is with our Service or a third-party service.</p>
+            <p>You agree not to disclose your password to any third party. You must notify us immediately upon becoming aware of any breach of security or unauthorized use of your account.</p>
+        </section>
 
-<div class="container">
-  <!-- Form to Add New Template (Only for you) -->
-  <div class="form-section">
-    <h2>Submit a New Template</h2>
-    <input type="text" id="templateLink" placeholder="Template Link (Discord invite link)" />
-    <button id="addTemplateBtn">Add Template</button>
-  </div>
+        <section id="intellectual-property">
+            <h2>Intellectual Property</h2>
+            <p>The Service and its original content, features and functionality are and will remain the exclusive property of [Your Company Name] and its licensors.</p>
+        </section>
 
-  <!-- Section to Display Saved Templates -->
-  <div class="template-section">
-    <h2>Available Templates</h2>
-    <div id="templateList"></div>
-  </div>
-</div>
+        <section id="links-to-other-websites">
+            <h2>Links To Other Websites</h2>
+            <p>Our Service may contain links to third-party web sites or services that are not owned or controlled by [Your Company Name].</p>
+            <p>[Your Company Name] has no control over, and assumes no responsibility for, the content, privacy policies, or practices of any third party web sites or services. You further acknowledge and agree that [Your Company Name] shall not be responsible or liable, directly or indirectly, for any damage or loss caused or alleged to be caused by or in connection with use of or reliance on any such content, goods or services available on or through any such web sites or services.</p>
+        </section>
 
-<script>
-  // Get the form inputs
-  const templateLinkInput = document.getElementById('templateLink');
-  const addTemplateBtn = document.getElementById('addTemplateBtn');
-  const templateList = document.getElementById('templateList');
+        <section id="termination">
+            <h2>Termination</h2>
+            <p>We may terminate or suspend your account immediately, without prior notice or liability, for any reason whatsoever, including without limitation if you breach the Terms.</p>
+            <p>Upon termination, your right to use the Service will immediately cease. If you wish to terminate your account, you may simply discontinue using the Service.</p>
+        </section>
 
-  // Check if there are any templates saved in localStorage
-  const loadTemplates = () => {
-    const templates = JSON.parse(localStorage.getItem('templates')) || [];
-    templateList.innerHTML = '';
-    templates.forEach((template) => {
-      const templateCard = document.createElement('div');
-      templateCard.classList.add('template-card');
-      templateCard.innerHTML = `
-        <h3>${template.name}</h3>
-        <p>${template.description}</p>
-        <a href="${template.link}" target="_blank">View Template</a>
-        <div class="card-group">
-          <div class="card">
-            <h3>Channels & Categories</h3>
-            <ul>${template.channels.map(ch => `<li>${ch}</li>`).join('')}</ul>
-          </div>
-          <div class="card">
-            <h3>Roles</h3>
-            <ul>${template.roles.map(role => `<li>${role}</li>`).join('')}</ul>
-          </div>
-        </div>
-      `;
-      templateList.appendChild(templateCard);
-    });
-  };
+        <section id="governing-law">
+            <h2>Governing Law</h2>
+            <p>These Terms shall be governed and construed in accordance with the laws of [Your State/Country], without regard to its conflict of law provisions.</p>
+            <p>Our failure to enforce any right or provision of these Terms will not be considered a waiver of those rights. If any provision of these Terms is held to be invalid or unenforceable by a court, the remaining provisions of these Terms will remain in effect. These Terms constitute the entire agreement between us regarding our Service, and supersede and replace any prior agreements we might have between us regarding the Service.</p>
+        </section>
 
-  // Simulate fetching server data (Mock Data for now)
-  const fetchServerData = (link) => {
-    // Here, you would normally make an API request to fetch server info.
-    return {
-      name: 'Sample Discord Server',
-      description: 'A description of the template server.',
-      link: link,
-      channels: ['#general', '#music', '#games'],
-      roles: ['Admin', 'Member', 'Bot'],
-    };
-  };
+        <section id="changes">
+            <h2>Changes</h2>
+            <p>We reserve the right, at our sole discretion, to modify or replace these Terms at any time. If a revision is material we will try to provide at least 30 days notice prior to any new terms taking effect. What constitutes a material change will be determined at our sole discretion.</p>
+            <p>By continuing to access or use our Service after those revisions become effective, you agree to be bound by the revised terms. If you do not agree to the new terms, please stop using the Service.</p>
+        </section>
 
-  // Add a new template
-  const addTemplate = () => {
-    const link = templateLinkInput.value.trim();
-
-    if (link) {
-      const serverData = fetchServerData(link);
-
-      // Add the new template to localStorage
-      const templates = JSON.parse(localStorage.getItem('templates')) || [];
-      templates.push(serverData);
-      localStorage.setItem('templates', JSON.stringify(templates));
-
-      // Clear the form input
-      templateLinkInput.value = '';
-
-      // Reload templates to show the newly added one
-      loadTemplates();
-    } else {
-      alert('Please provide a template link!');
-    }
-  };
-
-  // Event listener for the Add Template button
-  addTemplateBtn.addEventListener('click', addTemplate);
-
-  // Load saved templates when the page loads
-  window.onload = loadTemplates;
-</script>
-
+        <section id="contact-us">
+            <h2>Contact Us</h2>
+            <p>If you have any questions about these Terms, please contact us at [Your Contact Email].</p>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2025 YourDevTools.io. All rights reserved.</p>
+    </footer>
+    <script src="script.js"></script>
 </body>
 </html>
